fix(map): search size on mobile

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -56,6 +56,9 @@ header .header-logo iconify-icon {
 #main-content .custom-file-container .image-preview {
   height: 116px;
 }
+#map .mapboxgl-ctrl-geocoder {
+  max-width: calc(100vw - 60px);
+}
 
 .shadow-mdl {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
